cloud-api first build
